[package]
name = "wg-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
log = { version = "0.4.21", features = ["kv", "kv_std"] }
nix = { version = "0.28.0", features = ["fs", "poll"] }
smoltcp = "0.11.0"
anyhow = "1.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
boringtun = "0.6.0"
base64 = "0.22.1"
toml = "0.8.13"
serde = { version = "1.0.199", features = ["derive"] }
rand = "0.9.0-alpha.1"
